# SJZ_AutoPurchase

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  sjz.py  sjz_new.py
.kiro/specs/project-restructure/: design.md  requirements.md  tasks.md
smart_buyer/: __init__.py  main.py  py.typed
smart_buyer/config/: __init__.py  defaults.py  manager.py  validator.py
smart_buyer/core/: __init__.py  automation.py  exceptions.py  ocr.py
smart_buyer/ui/: __init__.py  cli.py  gui.py
smart_buyer/utils/: __init__.py  helpers.py  logging.py
tests/: __init__.py  test_automation.py  test_cli.py  test_config.py  test_gui.py  test_integration.py  test_ocr.py
